manifests/base/resources/qix-sessions/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: qix-sessions
    chart: qix-sessions-5.6.7
    heritage: Helm
    release: qix-sessions
  name: qix-sessions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qix-sessions
      release: qix-sessions
  template:
    metadata:
      labels:
        app: qix-sessions
        release: qix-sessions
    spec:
      containers:
      - command:
        - /qix-sessions
        - --logtostderr
        image: qliktech-docker.jfrog.io/qix-sessions:5.5.19
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /live
            port: 8080
        name: main
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
        volumeMounts:
        - mountPath: /secrets
          name: secrets
          readOnly: true
      imagePullSecrets:
      - name: artifactory-docker-secret
      serviceAccountName: $(PREFIX)-qix-sessions
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          name: qix-sessions-configs
        name: qix-sessions-configs
      - emptyDir: {}
        name: secrets
---
