manifests/base/resources/qix-sessions/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
    prometheus.io/scrape_high_cardinality: "true"
  labels:
    app: qix-sessions
    chart: qix-sessions-5.6.7
    heritage: Helm
    release: qix-sessions
  name: qix-sessions
spec:
  ports:
  - name: qix-sessions
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: qix-sessions
    release: qix-sessions
  type: ClusterIP
---
